# OTUS-homeworks

./: OTUS-homeworks.code-workspace  README.md
T1/: CMakeLists.txt
T1/haf/: CMakeLists.txt  Less1.h  Less2.h  main.cpp  mask.h  otus.h
